<resources>
    <string name="app_name">TravelGuide</string>
    <string name="priority">Öncelik</string>
    <string name="add_visit">Ziyaret Ekle</string>
    <string name="save">Kaydet</string>
    <string name="go">GİT</string>
    <string name="show_location">Konum\nGöster</string>
    <string name="location_short_desc">Yer Kısa tanım</string>
    <string name="location_long_desc">Kısa Açıklama</string>
    <string name="visit_history">Ziyaret Geçmişi</string>
    <string name="visit_date">Ziyaret Tarihi</string>
    <string name="visit_description">Ziyaret Açıklaması</string>
    <string name="where_are_you_want_to_upload_image_from">Resmi Nereden Yüklemek İstersiniz?</string>
    <string name="camera">Kamera</string>
    <string name="Gallery">Galeri</string>
    <string name="image_taken">Resim Çekildi!</string>
    <string name="permission_required">İzin Gerekli!</string>
    <string name="go_settings_and_approve_permissions">Ayarlara gidin ve izinleri onaylayın!</string>
    <string name="settings">Ayarlar</string>
    <string name="cancel">Vazgeç</string>
    <string name="write_description">Açıklama Giriniz!</string>
    <string name="add_location_in_map">Konum Ekle</string>
    <string name="location_name">Yer Adı</string>
    <string name="add_location_name">Yer adı giriniz</string>
    <string name="add_desc_info">Tanım bilgisi giriniz</string>
    <string name="add_long_desc">Kısa açıklama giriniz</string>
    <string name="add_location">Yer Ekle</string>
    <string name="choose_map">Konum Seç</string>
    <string name="select_priority">Öncelik Seç</string>
    <string name="toBeTravelled">Gezilecekler</string>
    <string name="travelled">Gezdiklerim</string>
    <string name="map_required">Konum Bilgisi Gerekli!</string>
    <string name="add_map_to_save_location">Yer bilgisini kaydetmek için konum bilgisi girilmesi zorunludur!</string>
    <string name="okey">Tamam</string>
    <string name="Splash">Gezi \nRehberim</string>

</resources>