<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_page_background_color"
    tools:context=".presentation.ui.fragment.add_location.AddNewLocationFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarAddLoc"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:background="@color/blue"
        android:paddingEnd="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        tools:ignore="RtlSymmetry">

        <ImageView
            android:id="@+id/imageViewBackNavigation"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:contentDescription="@null"
            android:src="@drawable/ic_back_arrow" />

        <TextView
            android:id="@+id/toolbarAddLocationTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginEnd="?attr/actionBarSize"
            android:maxLines="2"
            android:text="@string/add_location"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_24_sp"
            android:textStyle="normal"
            tools:layout_editor_absoluteX="48dp"
            tools:layout_editor_absoluteY="12dp" />

    </androidx.appcompat.widget.Toolbar>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginTop="11dp"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarAddLoc"
        tools:listitem="@layout/add_image_row" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonAddLocationMap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="19dp"
        android:background="@drawable/blue_button_background"
        android:minHeight="0dp"
        android:paddingHorizontal="17dp"
        android:paddingTop="5dp"
        android:paddingBottom="4dp"
        android:text="@string/add_location_in_map"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_10_sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerView"
        tools:ignore="MissingConstraints" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="13dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonAddLocationMap">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/customSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewLocationName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="18dp"
                android:layout_marginStart="18dp"
                android:layout_marginTop="13dp"
                android:layout_marginEnd="17dp"
                android:backgroundTint="@color/white"
                app:cardCornerRadius="6dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardViewLocationPriority">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textViewLocationNameTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="14dp"
                        android:layout_marginTop="12dp"
                        android:text="@string/location_name"
                        android:textColor="@color/default_text_color"
                        android:textSize="@dimen/text_size_10_sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/editTextLocationName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="14dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="9dp"
                        android:autofillHints="@null"
                        android:background="@color/white"
                        android:hint="@string/add_location_name"
                        android:inputType="text"
                        android:textColor="@color/default_text_color_light"
                        android:textSize="@dimen/text_size_10_sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/textViewLocationNameTitle" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewLocationShortDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="18dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="11dp"
                android:layout_marginEnd="19dp"
                android:backgroundTint="@color/white"
                app:cardCornerRadius="6dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardViewLocationName">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textViewLocationShortDescTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="14dp"
                        android:layout_marginTop="12dp"
                        android:text="@string/location_short_desc"
                        android:textColor="@color/default_text_color"
                        android:textSize="@dimen/text_size_10_sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/editTextLocationShortDesc"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="14dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="9dp"
                        android:autofillHints="@null"
                        android:background="@color/white"
                        android:hint="@string/add_desc_info"
                        android:inputType="text"
                        android:textColor="@color/default_text_color_light"
                        android:textSize="@dimen/text_size_10_sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/textViewLocationShortDescTitle" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewLocationLongDescription"
                android:layout_width="match_parent"
                android:layout_height="157dp"
                android:layout_marginHorizontal="18dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="11dp"
                android:layout_marginEnd="19dp"
                android:backgroundTint="@color/white"
                app:cardCornerRadius="6dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardViewLocationShortDescription">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textViewLocationLongtDescTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="14dp"
                        android:layout_marginTop="12dp"
                        android:text="@string/location_long_desc"
                        android:textColor="@color/default_text_color"
                        android:textSize="@dimen/text_size_10_sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/editTextLocationLongDesc"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="14dp"
                        android:layout_marginTop="8dp"
                        android:autofillHints="@null"
                        android:background="@color/white"
                        android:hint="@string/add_long_desc"
                        android:inputType="textMultiLine"
                        android:textColor="@color/default_text_color_light"
                        android:textSize="@dimen/text_size_10_sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/textViewLocationLongtDescTitle"
                        app:layout_constraintVertical_bias="0.0" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonAddLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="44dp"
                android:layout_marginTop="100dp"
                android:layout_marginEnd="47dp"
                android:layout_marginBottom="17dp"
                android:background="@drawable/blue_button_background"
                android:minHeight="0dp"
                android:padding="0dp"
                android:text="@string/save"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_20_sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>